# bintrong_game

./: .dev.env  .gitignore  Dockerfile.sglang  README.md  api.py  app.py  biography.md  capstone_assessment.docx  constraints.docx  constraints.md  description.md  design_D0.md  design_D1.md  design_D2.md  design_presentation.pptx  docker-compose.yml  main.py  milestones.docx  milestones.md  package-lock.json  package.json  project_description.md  pyproject.toml  tasklist.docx  tasklist.md  team_contract.md  tsconfig.json  user_stories.md  webpack.config.js
design_diagrams/: all.docx  design_D2.md
public/: index.html
scripts/: api.py  app.py  sqlite.sh  store.sh
src/: index.ts  main.ts  utils.py
src/livetrivia/: __init__.py  _be_app.py  db.py  jwt_utils.py  utils.py
src/livetrivia/_fe_app/: __init__.py  _app.py  components.py
src/livetrivia/_fe_app/assets/: account-callbacks.js  layout-callbacks.js  sign-in-callbacks.js
src/livetrivia/_fe_app/callbacks/: __init__.py  login_callbacks.py
src/livetrivia/_fe_app/pages/: __init__.py  account.py  files.py  home.py  join.py  login.py
src/livetrivia/models/: __init__.py  file.py  session.py  user.py
src/livetrivia/routes/: __init__.py  auth_and_files.py  files.py  session.py  user.py
src/livetrivia/text_extraction/: __init__.py  _youtube.py
src/text_extraction/: __init__.py  _pdf.py  _youtube.py
tests/unit/: test_getenvs.py
