[project]
name = "livetrivia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "youtube-transcript-api>=1.2.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

