[project]
name = "livetrivia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lazy-loader>=0.4",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.121.1",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "pypdf>=6.2.0",
    "youtube-transcript-api>=1.2.3",
    "python-multipart>=0.0.21",
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "pydantic[email]>=2.12.4",
    "pyjwt>=2.10.1",
]
frontend = [
    "dash-ag-grid>=32.3.2",
    "dash-extensions>=2.0.4",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.4.0",
    "dash[async]>=3.3.0",
]
dev = [
    "ruff>=0.14.5",
    "pytest>=9.0.2",
    "pandas>=3.0.0",
    "livetrivia[backend,frontend]",
    "uvicorn>=0.38.0",
]
prod = [
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.pip]
all-extras = true
